from enum import Enum

class TipoAbbonamento(Enum):
    SALAPESIECORSI = 0
    CORSI = 1
    SALAPESI = 2